--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,11 @@
 {
     "version": "0.2.0",
-    "configurations": [
-
-
-
-        {
-            "type": "firefox",
-            "request": "launch",
-            "reAttach": true,
-            "name": "Launch localhost",
-            "url": "http://192.168.43.251:8080",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
-            "name": "Launch index.html",
-            "type": "firefox",
-            "request": "launch",
-            "reAttach": true,
-            "file": "${workspaceFolder}/index.html"
-        }
-    ]
+    "configurations": [{
+        "type": "firefox",
+        "request": "launch",
+        "reAttach": true,
+        "name": "Launch localhost",
+        "url": "http://192.168.43.251:8080",
+        "webRoot": "${workspaceFolder}"
+    }, ]
 }
