--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,13 @@
 {
-    "version": "0.2.0",
-    "configurations": [{
-        "type": "firefox",
-        "request": "launch",
-        "reAttach": true,
-        "name": "Launch localhost",
-        "url": "http://192.168.43.251:8080",
-        "webRoot": "${workspaceFolder}"
-    }, ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "firefox",
+      "request": "launch",
+      "reAttach": true,
+      "name": "Launch localhost",
+      "url": "http://192.168.43.252:8080",
+      "webRoot": "${workspaceFolder}"
+    }
+  ]
 }
