--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "speak-listen-cebuano",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "multer": "^1.4.2"
+  }
 }
