--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "winston": "^3.2.1"
   }
 }
