--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-layout": "^0.1.0",
     "fs": "0.0.1-security",
     "multer": "^1.4.2",
     "winston": "^3.2.1"
